--- a/TORONTO Neighbourhoods 3 .ipynb
+++ b/TORONTO Neighbourhoods 3 .ipynb
@@ -1702,8 +1702,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'KMBOEMWZNM4BRERXSNLHTVER3DGBSCCDZFRUYGPBM1L4TQPB' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'X0E1AXAGPDZ2OAPVJZZOYWGBCLJWINWUOYMDXUUFUMHXH23H' # your Foursquare Secret\n",
+    "CLIENT_ID = '-----' # your Foursquare ID\n",
+    "CLIENT_SECRET = '-------' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version"
    ]
   },
